test_regress/t/t_fourstate_assign_complex_lhs_unsup.out
%Error-UNSUPPORTED: t/t_fourstate_assign_complex_lhs_unsup.v:10:15: Fourstate LHS other than a simple variable reference is not supported with continuous assignment
                                                                  : ... note: In instance 't'
   10 |   assign x[1] = y;
      |               ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
